# api/src/application/auth/dto.rs
@@ -1,0 +1,11 @@
+use crate::{
+    application::traits::types::{AccessToken, RefreshToken},
+    domain::user::model::User,
+};
+
+#[derive(Debug)]
+pub struct AuthResult {
+    pub user: User,
+    pub access_token: AccessToken,
+    pub refresh_token: RefreshToken,
+}
