# api/src/presentation/response.rs
@@ -1,1 +1,1 @@
-pub mod user_response;
+pub mod auth_response;
